# the-red-pill

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  inventory.sh  pyproject.toml  server_discovery.py
modules/: applications.py  containers.py  databases.py  network.py  report_generator.py  security.py  services.py  system_info.py
modules/app_analyzers/: base_analyzer.py  laravel_analyzer.py  nodejs_analyzer.py
tests/: test_server_discovery.py
